Bug 221843 - bookmarks data loss on Mac OS 10.1.  Check to see whether the temporary unique file is already in the target directory before calling FSMoveObject(), since moving a file into the directory it's currently in returns an error on 10.1.  Fix dependencies to rebuild libxpcom when MoreFiles is updated.  r=ccarlen, sr=darin, a=brendan.